@@ -1,22 +1,13 @@
-﻿using Abp.Application.Services.Dto;
-using Abp.AutoMapper;
+﻿using Abp.AutoMapper;
 using Ermes.Dto;
 using Ermes.Dto.Spatial;
 using Ermes.Enums;
 using Ermes.Organizations.Dto;
-using Ermes.Profile.Dto;
-using Ermes.Reports;
 using Ermes.Reports.Dto;
-using Microsoft.VisualBasic.CompilerServices;
-using NetTopologySuite.Features;
-using NetTopologySuite.Geometries;
 using Newtonsoft.Json;
-using Newtonsoft.Json.Converters;
-using NpgsqlTypes;
 using System;
 using System.Collections.Generic;
 using System.ComponentModel.DataAnnotations;
-using System.Text;
 
 namespace Ermes.Missions.Dto
 {
@@ -26,7 +17,9 @@ namespace Ermes.Missions.Dto
         public int Id { get; set; }
         public string Type { get; } = "Mission";
         [Required]
+        [StringLength(Mission.MAX_TITLE_LENGTH)]
         public string Title { get; set; }
+        [StringLength(Mission.MAX_DESCRIPTION_LENGTH)]
         public string Description { get; set; }
         public RangeDto<DateTime> Duration { get; set; }
         public MissionStatusType CurrentStatus { get; set; }
@@ -34,6 +27,7 @@ namespace Ermes.Missions.Dto
         public int? CoordinatorTeamId { get; set; }
         public int OrganizationId { get; set; }
         public OrganizationDto Organization { get; set; }
+        [StringLength(Mission.MAX_NOTES_LENGTH)]
         public string Notes { get; set; }
         public PointPosition Centroid { get; set; }
         public List<ReportDto> Reports { get; set; }
