@@ -1,9 +1,5 @@
-﻿using Abp.Application.Services.Dto;
-using Abp.AutoMapper;
-using Ermes.Roles;
-using System;
-using System.Collections.Generic;
-using System.Text;
+﻿using Abp.AutoMapper;
+using System.ComponentModel.DataAnnotations;
 
 namespace Ermes.Roles.Dto
 {
@@ -11,7 +7,9 @@ namespace Ermes.Roles.Dto
     public class RoleDto
     {
         public int Id { get; set; }
+        [StringLength(Role.MAX_NAME_LENGTH)]
         public string Name { get; set; }
+        [StringLength(Role.MAX_DESCRIPTION_LENGTH)]
         public string Description { get; set; }
         public bool Default { get; set; }
         public bool SuperRole { get; set; }
