@@ -1,3 +1,5 @@
+- Bugfix - Validation errors added in DTO classes (#155)
+
 Ver. 4.14.1 - 2023-07-18
 --------------------------------
 - Feature - Job for notification received added
